# NG

./: .gitignore  AGENTS.md  CODE_DRIFT_CONTROL.md  README.md  main.py  pyproject.toml
core/: app.py  config.py  db.py  feature_loader.py  logging.py  quality.py  registry.py
features/: access_gate.py  admin_quality.py  business_profile.py  business_templates.py  ocr_ingest.py  owner_analytics_query.py  owner_events_api.py  owner_inbox.py  owner_inbox_actions.py  owner_insights.py  playbooks.py  postcall_extract.py  postcall_notify_email.py  postcall_notify_sms.py  postcall_reconcile.py  sample_feature.py  scheduler_tick.py  shared_line_access.py  voice_flow_a.py  whatsapp_in.py  wizard_goals.py
ops/: AGENT_BUNDLES.md  BUNDLE_PROOF_GATES.md  CHATLOG.md  CHECKPOINT.md  CHECKPOINT_2026-02-15.md  CONTEXT.md  DECISIONS.md  GPT_ENGINEERING_FACILITATOR_PROMPT.md  GPT_INSTRUCTIONS_VOZLIA_ENGINEERING_FACILITATOR.md  JOURNAL.md  KNOWN_GOTCHAS.md  NG_BUILD_PLAN.md  TASKBOARD.md  WEBUI_MVP_SPEC.md  WEBUI_TASK_BUNDLES.md
scripts/: agent_bundle_workflow.sh  agent_task_workflow.sh  analyze_bargein_latency.py  autopush.sh  bundle_gate_checklist.sh  capture_render_logs.sh  clean_generated.sh  extract_call_window.py  feature_registry_check.py  load_operator_env.sh  merge_with_gates.sh  quality_gate.sh  run_gates_record.sh  run_regression.py  run_webui.sh  update_all.sh
tests/: test_access_gate.py  test_business_profile.py  test_business_templates.py  test_db_event_store.py  test_ocr_ingest.py  test_owner_analytics_query.py  test_owner_events_api.py  test_owner_inbox.py  (+13 more)
(+95 files in other folders)
