[project]
name = "vozlia-ng"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "features*"]
exclude = ["ops*", "scripts*", "tests*", ".agents*"]

[tool.ruff]
line-length = 100
extend-exclude = [".venv", ".git", "ops", ".agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
